--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     - ./Backend/mysql/data:/var/lib/mysql
     - ./Backend/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
     - ./Backend/mysql/sql:/docker-entrypoint-initdb.d
+    - ./Backend/mysql/csv:/etc/mysql/csv
     ports:
     - 3306:3306
   frontend:
@@ -47,7 +48,40 @@ services:
       - ./proxy/envoy.yaml:/etc/envoy/envoy.yaml
     ports:
       - "10000:10000"
-
+  apigw:
+    build:
+      context: kong/kong/
+      dockerfile: Dockerfile
+    depends_on:
+      - cassandra
+    environment:
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_PROXY_LISTEN: 0.0.0.0:8000 http2, 0.0.0.0:8443 ssl http2
+    ports:
+      - 80:8000
+      - 8001:8001
+      - 443:8443
+      #- 9080:9080
+      # - 8444:8444
+    logging:
+      options:
+        max-size: "2g"
+        max-file: "2"
+  cassandra:
+    build:
+      context: kong/cassandra/
+      dockerfile: Dockerfile
+    # ports:
+    #   - 9042:9042
+    #volumes:
+    #  - kong/Data:/var/lib/cassandra
+    environment:
+      JVM_OPTS: -Xms256M -Xmx256M
+    logging:
+      options:
+        max-size: "1g"
+        max-file: "2"
 networks:
   default:
     driver: bridge
