--- a/kubernetes/envoy.yaml
+++ b/kubernetes/envoy.yaml
@@ -28,7 +28,7 @@ static_resources:
                 allow_origin_string_match:
                 - prefix: "*"
                 allow_methods: GET, PUT, DELETE, POST, OPTIONS
-                allow_headers: Authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
+                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                 max_age: "1728000"
                 expose_headers: custom-header-1,grpc-status,grpc-message
           access_log:
@@ -48,4 +48,4 @@ static_resources:
     upstream_connection_options:
       tcp_keepalive:
         keepalive_time: 300
-    hosts: [{ socket_address: { address: apigw, port_value: 8000 }}]
+    hosts: [{ socket_address: { address: backend, port_value: 8000 }}]
