--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,7 @@
 FROM node:lts-alpine
 WORKDIR /usr/src/app
 RUN npm install -g create-react-app
-#RUN npm install -g create-react-app grpc --unsafe-perm
-RUN npx create-react-app react-sample --typescript
+RUN npx create-react-app react-sample
 WORKDIR /usr/src/app/react-sample
-#COPY ./react-sample/package.json /usr/src/app/react-sample/package.json
-RUN npm install grpc grpc-web google-protobuf @types/google-protobuf
+RUN npm install grpc grpc-web google-protobuf keycloak-js @react-keycloak/web
 
