--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,12 +31,13 @@ services:
     - ./Backend/mysql/csv:/etc/mysql/csv
     ports:
     - 3306:3306
-  frontend:
+  frontend_notype:
     build:
-      context: ./frontend
+      context: ./frontend_notype
       dockerfile: Dockerfile
     volumes:
-     - ./frontend/react-sample/src:/usr/src/app/react-sample/src
+     - ./frontend_notype/react-sample/src:/usr/src/app/react-sample/src
+     - ./frontend_notype/react-sample/public/keycloak.json:/usr/src/app/react-sample/public/keycloak.json
     command: sh -c "npm install && npm start"
     ports:
      - "3000:3000"
@@ -48,40 +49,31 @@ services:
       - ./proxy/envoy.yaml:/etc/envoy/envoy.yaml
     ports:
       - "10000:10000"
-  apigw:
-    build:
-      context: kong/kong/
-      dockerfile: Dockerfile
-    depends_on:
-      - cassandra
+  postgres:
+    image: postgres
+    volumes:
+      - ./keycloak/postgres_data:/var/lib/postgresql/data
     environment:
-      KONG_ADMIN_ACCESS_LOG: /dev/stdout
-      KONG_ADMIN_ERROR_LOG: /dev/stderr
-      KONG_PROXY_LISTEN: 0.0.0.0:8000 http2, 0.0.0.0:8443 ssl http2
-    ports:
-      - 80:8000
-      - 8001:8001
-      - 443:8443
-      #- 9080:9080
-      # - 8444:8444
-    logging:
-      options:
-        max-size: "2g"
-        max-file: "2"
-  cassandra:
-    build:
-      context: kong/cassandra/
-      dockerfile: Dockerfile
-    # ports:
-    #   - 9042:9042
-    #volumes:
-    #  - kong/Data:/var/lib/cassandra
-    environment:
-      JVM_OPTS: -Xms256M -Xmx256M
-    logging:
-      options:
-        max-size: "1g"
-        max-file: "2"
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: password
+  keycloak:
+      image: quay.io/keycloak/keycloak:latest
+      environment:
+        DB_VENDOR: POSTGRES
+        DB_ADDR: postgres
+        DB_DATABASE: keycloak
+        DB_USER: keycloak
+        DB_SCHEMA: public
+        DB_PASSWORD: password
+        KEYCLOAK_USER: admin
+        KEYCLOAK_PASSWORD: Pa55w0rd
+        # Uncomment the line below if you want to specify JDBC parameters. The parameter below is just an example, and it shouldn't be used in production without knowledge. It is highly recommended that you read the PostgreSQL JDBC driver documentation in order to use it.
+        #JDBC_PARAMS: "ssl=true"
+      ports:
+        - 8080:8080
+      depends_on:
+        - postgres
 networks:
   default:
     driver: bridge
